Setting up the nginx sever to use SSL certificates.

--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -3,8 +3,13 @@ events {
 
 http {
     server {
-        listen 80;
-        server_name alphine;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+
+        include snippets/self-signed.conf;
+        include snippets/ssl-params.conf;
+
+        server_name ochoumou.42.net;
         root /var/www/html;
         index index.html;
     
@@ -16,13 +21,13 @@ http {
         }
  
         location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass wordpress:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
+                try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass wordpress:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param PATH_INFO $fastcgi_path_info;
             }
         }
 }
