--- a/cloud/src/requirements/mariadb/conf/my.cnf
+++ b/cloud/src/requirements/mariadb/conf/my.cnf
@@ -23,7 +23,7 @@
 # Port or socket location where to connect
 port = 3306
 socket = /run/mysqld/mysqld.sock
-bind-address = 0.0.0.0
+#bind-address = 0.0.0.0
 
 # Import all .cnf files from configuration directory
 !includedir /etc/mysql/conf.d/
