Solved rendering the css problem.

--- a/cloud/src/requirements/wordpress/Dockerfile
+++ b/cloud/src/requirements/wordpress/Dockerfile
@@ -1,8 +1,11 @@
 FROM debian:11.6
 
-WORKDIR /home
-COPY ./tools/install_wp.sh .
-RUN chmod +x install_wp.sh
+RUN apt update && apt install -y wget php php-fpm php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip php-mysql && apt clean
+
+WORKDIR /tmp
+COPY ./tools/docker_entry.sh .
+RUN wget http://wordpress.org/latest.tar.gz
+RUN chmod +x docker_entry.sh
 
 EXPOSE 9000
-CMD ["./install_wp.sh"]
+ENTRYPOINT [ "./docker_entry.sh" ]
