--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -2,6 +2,7 @@ events {
 }
 
 http {
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
@@ -9,25 +10,27 @@ http {
         include snippets/self-signed.conf;
         include snippets/ssl-params.conf;
 
-        server_name ochoumou.42.net;
+        server_name ochoumou.42.fr;
         root /var/www/html;
-        index index.html;
+        index index.php;
     
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
     
         location / {
-            try_files /index.html $uri $uri/ /index.php?$args;
+            default_type  application/octet-stream;
+            include       /etc/nginx/mime.types;
+            try_files $uri $uri/ /index.php?$args;
         }
  
         location ~ \.php$ {
-                try_files $uri =404;
+                # try_files $uri =404;
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
                 fastcgi_pass wordpress:9000;
                 fastcgi_index index.php;
                 include fastcgi_params;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                fastcgi_param PATH_INFO $fastcgi_path_info;
+                fastcgi_param SCRIPT_NAME $fastcgi_path_info;
             }
         }
 }
