--- a/cloud/src/requirements/nginx/Dockerfile
+++ b/cloud/src/requirements/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.17.2
 RUN apk update && apk add nginx && apk add openssl
 
-WORKDIR /var/www/html
+WORKDIR /var/www/html/wordpress
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/ssl/private/nginx-signing.key \
     -out /etc/ssl/certs/nginx-cert.crt \
