--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,8 @@
 events {
+    
 }
 
 http {
-
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
@@ -11,17 +11,19 @@ http {
         include snippets/ssl-params.conf;
 
         server_name ochoumou.42.fr;
-    
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
-    
+
         location / {
-            root /var/www/html;
             default_type  application/octet-stream;
             include       /etc/nginx/mime.types;
             try_files $uri $uri/ /index.php?$args;
+
+            root /var/www/html/wordpress;
             index index.php;
-            location ~ \.php$ {
+
+             location ~ \.php$ {
+                # try_files $uri =404;
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
                 fastcgi_pass wordpress:9000;
                 fastcgi_index index.php;
@@ -30,5 +32,7 @@ http {
                 fastcgi_param SCRIPT_NAME $fastcgi_path_info;
             }
         }
+
+
     }
 }
