--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -33,6 +33,23 @@ http {
             }
         }
 
+        location ~ ^\/adminer(.*|$)
+        {
+            default_type  application/octet-stream;
+            include       /etc/nginx/mime.types;
+            try_files $uri $uri/ /index.php?$args;
 
+            root /var/www/html;
+            index index.php;
+            location ~ \.php$ {
+                # try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass adminer:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+            }
+        }
     }
 }
