--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -14,6 +14,22 @@ http {
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
+        root /var/www/html;
+
+        location ^~ /adminer 
+        {
+            try_files $uri /adminer/index.php$is_args$args;
+
+            location ~ \.php$
+            {
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass adminer:9001;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_params SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            }
+        }
+
         location / {
             default_type  application/octet-stream;
             include       /etc/nginx/mime.types;
@@ -31,25 +47,6 @@ http {
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 fastcgi_param SCRIPT_NAME $fastcgi_path_info;
             }
-        }
-
-        location ~ ^\/adminer(.*|$)
-        {
-            default_type  application/octet-stream;
-            include       /etc/nginx/mime.types;
-            try_files $uri $uri/ /index.php?$args;
-
-            root /var/www/html;
-            index index.php;
-            location ~ \.php$ {
-                # try_files $uri =404;
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass adminer:9000;
-                fastcgi_index index.php;
-                include fastcgi_params;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-            }
-        }
+        }       
     }
 }
