Fixed the error in nginx config, create the docker and config files for the ftp service.

--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -26,7 +26,7 @@ http {
                 fastcgi_pass adminer:9001;
                 fastcgi_index index.php;
                 include fastcgi_params;
-                fastcgi_params SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+                fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             }
         }
 
