Finished the ftp setup script, install all the required packages for vsftpd config.

--- a/cloud/src/requirements/bonus/ftp/Dockerfile
+++ b/cloud/src/requirements/bonus/ftp/Dockerfile
@@ -1,9 +1,14 @@
 FROM alpine:3.17.2
 
-RUN apk add vsftpd
+RUN apk add vsftpd openssl
 RUN mkdir -p /var/www/html
 
-COPY ./conf/vsftpd.conf /etc/vsftpd
+WORKDIR /tmp
+
+COPY ./conf/vsftpd.conf /etc/vsftpd/vsftpd.conf
+COPY ./tools/docker_entry.sh .
+
+RUN chmod +x ./docker_entry.sh
 
 EXPOSE 21
-ENTRYPOINT [ "vsftpd" ]
+ENTRYPOINT [ "./docker_entry.sh" ]
