Still teaking the ftp.

--- a/cloud/src/requirements/bonus/ftp/Dockerfile
+++ b/cloud/src/requirements/bonus/ftp/Dockerfile
@@ -11,4 +11,5 @@ COPY ./tools/docker_entry.sh .
 RUN chmod +x ./docker_entry.sh
 
 EXPOSE 21
+EXPOSE 50000-50010
 ENTRYPOINT [ "./docker_entry.sh" ]
