--- a/cloud/src/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/cloud/src/requirements/bonus/ftp/conf/vsftpd.conf
@@ -9,7 +9,7 @@
 # capabilities.
 #
 # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
-anonymous_enable=YES
+anonymous_enable=NO
 #
 # Uncomment this to allow local users to log in.
 local_enable=YES
@@ -19,8 +19,12 @@ write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
-#local_umask=022
+local_umask=077
 #
+# Set the root directory for FTP users
+local_root=/var/www/html
+
+
 # Uncomment this to allow the anonymous FTP user to upload files. This only
 # has an effect if the above global write enable is activated. Also, you will
 # obviously need to create a directory writable by the FTP user.
@@ -55,7 +59,7 @@ connect_from_port_20=YES
 #xferlog_std_format=YES
 #
 # You may change the default value for timing out an idle session.
-#idle_session_timeout=600
+idle_session_timeout=0
 #
 # You may change the default value for timing out a data connection.
 #data_connection_timeout=120
@@ -77,11 +81,11 @@ connect_from_port_20=YES
 # predicted this attack and has always been safe, reporting the size of the
 # raw file.
 # ASCII mangling is a horrible feature of the protocol.
-#ascii_upload_enable=YES
-#ascii_download_enable=YES
+ascii_upload_enable=YES
+ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-ftpd_banner=Welcome home
+#ftpd_banner=Welcome to blah FTP service.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -95,14 +99,11 @@ ftpd_banner=Welcome home
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-chroot_local_user=YES
-allow_writeable_chroot=YES
-user_sub_token=$USER
-local_root=/var/www/html
-
+#chroot_local_user=YES
 #chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd.chroot_list
+secure_chroot_dir=/var/run/vsftpd
 #
 # You may activate the "-R" option to the builtin ls. This is disabled by
 # default to avoid remote users being able to cause excessive I/O on large
@@ -116,18 +117,13 @@ local_root=/var/www/html
 listen=YES
 listen_port=21
 listen_address=0.0.0.0
-seccomp_sandbox=NO
 
+
+pasv_enable=YES
+pasv_min_port=50000
+pasv_max_port=50010
 #
 # This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
 # sockets, you must run two copies of vsftpd with two configuration files.
 # Make sure, that one of the listen options is commented !!
 #listen_ipv6=YES
-
-pasv_enable=YES
-pasv_min_port=21100
-pasv_max_port=21110
-
-userlist_enable=YES
-userlist_file=/etc/vsftpd.chroot_list
-userlist_deny=NO
