Finished setting up redis, it is working as expected.

--- a/cloud/src/requirements/bonus/redis/Dockerfile
+++ b/cloud/src/requirements/bonus/redis/Dockerfile
@@ -1,9 +1,13 @@
 FROM debian:11.6
 
 RUN apt update && apt install redis -y
+WORKDIR /tmp
 # Copy the new config file
 COPY ./conf/redis.conf /etc/redis/
+COPY ./tools/docker_entry.sh .
+
+RUN chmod +x ./docker_entry.sh
 
 EXPOSE 6379
 
-CMD ["redis-server --protected-mode no"]
+ENTRYPOINT [ "./docker_entry.sh" ]
