--- a/cloud/src/requirements/wordpress/Dockerfile
+++ b/cloud/src/requirements/wordpress/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:11.6
 
 RUN apt update && apt install -y wget php php-fpm php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip php-mysql && apt clean
-RUN apt install unzip
+RUN apt install unzip php-redis -y
 
 WORKDIR /tmp
 COPY ./tools/docker_entry.sh .
