--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -30,6 +30,11 @@ http {
             }
         }
 
+        location ^~ /monitor {
+            include proxy_params
+            proxy_pass http://cadvisor:8080;
+        }
+
         location / {
             default_type  application/octet-stream;
             include       /etc/nginx/mime.types;
