--- a/cloud/src/requirements/bonus/cadvisor/Dockerfile
+++ b/cloud/src/requirements/bonus/cadvisor/Dockerfile
@@ -3,11 +3,13 @@ FROM alpine:3.17.2
 RUN apk add --no-cache wget
 WORKDIR /tmp
 
+RUN wget -O cadvisor https://github.com/google/cadvisor/releases/download/v0.47.0/cadvisor-v0.47.0-linux-amd64
+
 COPY ./tools/docker_entry.sh .
 RUN chmod +x docker_entry.sh
 
 EXPOSE 8080
-ENTRYPOINT [ "./docker_entry.sh" ]
+# ENTRYPOINT [ "./docker_entry.sh" ]
 
 # RUN mkdir -p $GOPATH/src/github.com/google \
 #     && cd $GOPATH/src/github.com/google \
