--- a/cloud/src/requirements/bonus/static/Dockerfile
+++ b/cloud/src/requirements/bonus/static/Dockerfile
@@ -1,2 +1,9 @@
 FROM alpine:3.17.2
 
+RUN apk add --no-cache lighttpd
+RUN mkdir -p /var/www/html
+
+COPY ./assets/ /var/www/html/
+COPY ./conf/lighttpd.conf /etc/lighttpd/lighttpd.conf
+
+ENTRYPOINT [ "lighttpd" , "-D" , "-f" , "/etc/lighttpd/lighttpd.conf"]
