--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -10,6 +10,8 @@ http {
         include snippets/self-signed.conf;
         include snippets/ssl-params.conf;
 
+        include /etc/nginx/mime.types;
+
         server_name ochoumou.42.fr;
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
@@ -30,9 +32,13 @@ http {
             }
         }
 
-        location ^~ /monitor {
-            include proxy_params
-            proxy_pass http://cadvisor:8080;
+        location ^~ /showcase {
+            proxy_pass_header Content-Type;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://static:80/;
         }
 
         location / {
