--- a/cloud/src/requirements/bonus/ftp/Dockerfile
+++ b/cloud/src/requirements/bonus/ftp/Dockerfile
@@ -8,9 +8,10 @@ WORKDIR /tmp
 COPY ./conf/vsftpd.conf /etc/vsftpd.conf
 COPY ./tools/docker_entry.sh .
 
-RUN chmod +x ./docker_entry.sh
+RUN chmod +x ./docker_entry.sh && ./docker_entry.sh
 
 EXPOSE 21
 EXPOSE 50000-50010
 
-ENTRYPOINT [ "./docker_entry.sh" ]
+#
+CMD [ "vsftpd"]
