--- a/cloud/src/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/cloud/src/requirements/bonus/ftp/conf/vsftpd.conf
@@ -24,7 +24,6 @@ local_umask=077
 # Set the root directory for FTP users
 local_root=/var/www/html/wordpress
 
-
 # Uncomment this to allow the anonymous FTP user to upload files. This only
 # has an effect if the above global write enable is activated. Also, you will
 # obviously need to create a directory writable by the FTP user.
@@ -59,7 +58,7 @@ connect_from_port_20=YES
 #xferlog_std_format=YES
 #
 # You may change the default value for timing out an idle session.
-idle_session_timeout=0
+#idle_session_timeout=0
 #
 # You may change the default value for timing out a data connection.
 #data_connection_timeout=120
@@ -104,6 +103,7 @@ ascii_download_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd.chroot_list
 secure_chroot_dir=/var/run/vsftpd
+# allow_writeable_chroot=YES
 #
 # You may activate the "-R" option to the builtin ls. This is disabled by
 # default to avoid remote users being able to cause excessive I/O on large
@@ -122,6 +122,8 @@ listen_address=0.0.0.0
 pasv_enable=YES
 pasv_min_port=50000
 pasv_max_port=50010
+
+# userlist_file=/etc/vsftpd.userlist
 #
 # This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
 # sockets, you must run two copies of vsftpd with two configuration files.
