Resetting the ftp to locate the problem.

--- a/cloud/src/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/cloud/src/requirements/bonus/ftp/conf/vsftpd.conf
@@ -80,11 +80,11 @@ connect_from_port_20=YES
 # predicted this attack and has always been safe, reporting the size of the
 # raw file.
 # ASCII mangling is a horrible feature of the protocol.
-ascii_upload_enable=YES
-ascii_download_enable=YES
+# ascii_upload_enable=YES
+# ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-#ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=Welcome to ochoumou personal FTP server.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -119,9 +119,9 @@ listen_port=21
 listen_address=0.0.0.0
 
 
-pasv_enable=YES
-pasv_min_port=50000
-pasv_max_port=50010
+# pasv_enable=YES
+# pasv_min_port=50000
+# pasv_max_port=50010
 
 # userlist_file=/etc/vsftpd.userlist
 #
