--- a/cloud/src/requirements/bonus/ftp/Dockerfile
+++ b/cloud/src/requirements/bonus/ftp/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p /var/www/html/wordpress
 
 WORKDIR /tmp
 
-COPY ./conf/vsftpd.conf /etc/vsftpd.conf
+# COPY ./conf/vsftpd.conf /etc/vsftpd.conf
 COPY ./tools/docker_entry.sh .
 
 RUN chmod +x ./docker_entry.sh && ./docker_entry.sh
