--- a/cloud/src/requirements/bonus/static/Dockerfile
+++ b/cloud/src/requirements/bonus/static/Dockerfile
@@ -6,4 +6,6 @@ RUN mkdir -p /var/www/html
 COPY ./assets/ /var/www/html/
 COPY ./conf/lighttpd.conf /etc/lighttpd/lighttpd.conf
 
+EXPOSE 2500
+
 ENTRYPOINT [ "lighttpd" , "-D" , "-f" , "/etc/lighttpd/lighttpd.conf"]
