--- a/cloud/src/requirements/nginx/Dockerfile
+++ b/cloud/src/requirements/nginx/Dockerfile
@@ -7,11 +7,11 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -out /etc/ssl/certs/nginx-cert.crt \
     -subj "/C=MA/ST=Kh/L=Kh/O=42 Network. /OU=IT Department/CN=1337.ma"
 COPY ./conf/nginx.conf /etc/nginx/
-COPY ./conf/proxy_params /etc/nginx/
 COPY ./conf/self-signed.conf /etc/nginx/snippets/
 COPY ./conf/ssl-params.conf /etc/nginx/snippets/
-# The command bellow is just for testing purposes...
+#! Only testing....
 COPY ./assets .
+# Another comment...
 EXPOSE 443
-# This command will run nginx in no demaon mode...
+# This command will run nginx in no demaon mode....
 CMD ["nginx", "-g", "daemon off;"]
