--- a/cloud/src/requirements/nginx/conf/nginx.conf
+++ b/cloud/src/requirements/nginx/conf/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
@@ -10,7 +12,6 @@ http {
         include snippets/self-signed.conf;
         include snippets/ssl-params.conf;
 
-        include /etc/nginx/mime.types;
 
         server_name ochoumou.42.fr;
         access_log /var/log/nginx/access.log;
@@ -32,18 +33,32 @@ http {
             }
         }
 
-        location ^~ /showcase {
+        location            ^~ /cadvisor
+        {
+            rewrite ^/cadvisor(/.*) $1 break;
+            proxy_pass http://cadvisor:8080;
+            proxy_redirect /docker /cadvisor/docker;
+            proxy_redirect / /cadvisor/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location ^~ /showcase/ {
             proxy_pass_header Content-Type;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass http://static:80/;
+            proxy_pass http://static:2500/;
+            proxy_set_header X-Original-URI $request_uri;
+            proxy_set_header X-Original-Host $host;
+            proxy_set_header X-Original-Scheme $scheme;
         }
 
         location / {
             default_type  application/octet-stream;
-            include       /etc/nginx/mime.types;
             try_files $uri $uri/ /index.php?$args;
 
             root /var/www/html/wordpress;
