--- a/cloud/src/requirements/wordpress/Dockerfile
+++ b/cloud/src/requirements/wordpress/Dockerfile
@@ -9,6 +9,7 @@ COPY ./conf/wp-config-sample.php .
 RUN wget http://wordpress.org/latest.tar.gz
 RUN wget https://downloads.wordpress.org/plugin/redis-cache.latest-stable.zip
 RUN chmod +x docker_entry.sh
+RUN ./docker_entry.sh
 
 EXPOSE 9000
-ENTRYPOINT [ "./docker_entry.sh" ]
+ENTRYPOINT ["php-fpm7.4", "-F", "-R"]
