--- a/cloud/src/requirements/mariadb/Dockerfile
+++ b/cloud/src/requirements/mariadb/Dockerfile
@@ -1,5 +1,10 @@
 FROM debian:11.6
 RUN apt update && apt install -y mariadb-server
+#...
+ARG MARIADB_PASS MARIADB_DBNAME MARIADB_USER
+ENV MARIADB_DBNAME=${MARIADB_DBNAME}
+ENV MARIADB_PASS=${MARIADB_PASS}
+ENV MARIADB_USER=${MARIADB_USER}
 
 COPY ./tools/db_setup.sh .
 COPY ./tools/wp_setup.sh .
@@ -8,6 +13,7 @@ COPY ./conf/my.cnf /etc/mysql/
 
 RUN chmod +x docker_entry.sh
 RUN ./docker_entry.sh
+#.....
 
 EXPOSE 3306
 ENTRYPOINT ["mariadbd", "--bind-address=0.0.0.0", "--silent-startup"]
