Adding env variables for the ftp service.

--- a/cloud/src/requirements/bonus/ftp/Dockerfile
+++ b/cloud/src/requirements/bonus/ftp/Dockerfile
@@ -3,6 +3,10 @@ FROM alpine:3.17.3
 RUN	apk update && apk add --no-cache vsftpd shadow openssl
 RUN mkdir -p /var/www/html/wordpress
 
+ARG FTP_USER FTP_PASS
+ENV FTP_USER=${FTP_USER}
+ENV FTP_PASS=${FTP_PASS}
+
 WORKDIR /tmp
 
 COPY ./conf/vsftpd.conf /etc/vsftpd.conf
