Modifed the entry and build script to install wordpress automatically, still problem with redis.

--- a/cloud/src/requirements/wordpress/Dockerfile
+++ b/cloud/src/requirements/wordpress/Dockerfile
@@ -3,8 +3,6 @@ FROM debian:11.6
 WORKDIR /tmp
 
 RUN apt update && apt install -y wget php php-fpm php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip php-mysql unzip php-redis && apt clean
-RUN wget http://wordpress.org/latest.tar.gz
-RUN wget https://downloads.wordpress.org/plugin/redis-cache.latest-stable.zip
 
 ARG MARIADB_PASS MARIADB_DBNAME MARIADB_USER MARIADB_HOST WP_USER WP_PASS
 ENV MARIADB_DBNAME=${MARIADB_DBNAME}
@@ -14,10 +12,11 @@ ENV MARIADB_HOST=${MARIADB_HOST}
 ENV WP_USER=${WP_USER}
 ENV WP_PASS=${WP_PASS}
 
-COPY ./tools/test.sh .
-RUN chmod +x test.sh
-RUN ./test.sh
+COPY ./tools/setup_wp.sh .
+COPY ./tools/docker_entry.sh .
+RUN chmod +x setup_wp.sh
+RUN chmod +x docker_entry.sh
+RUN ./setup_wp.sh
 
-# .
 EXPOSE 9000
-ENTRYPOINT ["php-fpm7.4", "-F", "-R"]
+ENTRYPOINT [ "./docker_entry.sh" ]
