--- a/cloud/src/docker-compose.yml
+++ b/cloud/src/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - wpdata:/var/www/html/wordpress
     depends_on:
       - mariadb
+      - redis
     ports:
       - 9000:9000
     restart: always
@@ -95,7 +96,6 @@ services:
     container_name: redis
     build: ./requirements/bonus/redis
     depends_on:
-      - wordpress
       - nginx
       - mariadb
     ports:
