--- a/cloud/src/requirements/bonus/adminer/Dockerfile
+++ b/cloud/src/requirements/bonus/adminer/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:11.6
+FROM debian:buster
 
 RUN apt update && apt install -y wget php php-fpm php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip php-mysql && apt clean
 
