Switching to buster broke some stuff, its all fixed now.

--- a/cloud/src/requirements/mariadb/Dockerfile
+++ b/cloud/src/requirements/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:buster
-RUN apt update && apt install -y mariadb-server
+RUN apt update && apt install -y mariadb-server procps
 #...
 ARG MARIADB_PASS MARIADB_DBNAME MARIADB_USER
 ENV MARIADB_DBNAME=${MARIADB_DBNAME}
@@ -13,7 +13,7 @@ COPY ./conf/my.cnf /etc/mysql/
 
 RUN chmod +x docker_entry.sh
 RUN ./docker_entry.sh
-#.....
+# #.....
 
-EXPOSE 3306
-ENTRYPOINT ["mariadbd", "--bind-address=0.0.0.0", "--silent-startup"]
+# EXPOSE 3306
+ENTRYPOINT ["mysqld", "--bind-address=0.0.0.0", "--silent-startup"]
