--- a/cloud/src/requirements/bonus/redis/conf/redis.conf
+++ b/cloud/src/requirements/bonus/redis/conf/redis.conf
@@ -1097,7 +1097,7 @@ acllog-max-len 128
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory 500mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1126,7 +1126,7 @@ acllog-max-len 128
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy volatile-lru
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
