Project cleanup, makefile still not ready.

--- a/cloud/src/requirements/mariadb/Dockerfile
+++ b/cloud/src/requirements/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:buster
 RUN apt update && apt install -y mariadb-server procps
-#...
+
 ARG MARIADB_PASS MARIADB_DBNAME MARIADB_USER
 ENV MARIADB_DBNAME=${MARIADB_DBNAME}
 ENV MARIADB_PASS=${MARIADB_PASS}
@@ -13,7 +13,6 @@ COPY ./conf/my.cnf /etc/mysql/
 
 RUN chmod +x docker_entry.sh
 RUN ./docker_entry.sh
-# #.....
 
-# EXPOSE 3306
+EXPOSE 3306
 ENTRYPOINT ["mysqld", "--bind-address=0.0.0.0", "--silent-startup"]
