Adding some comment for the SSL configuration file.

--- a/cloud/src/requirements/nginx/conf/ssl-params.conf
+++ b/cloud/src/requirements/nginx/conf/ssl-params.conf
@@ -1,16 +1,25 @@
+# Specifies the version of the SSL protocol to be used.
 ssl_protocols TLSv1.3;
+# Use the cipher suites that are preferred by the server rather than those used by the client.
 ssl_prefer_server_ciphers on;
+# Specifies the cipher suites that can be used for encryption.
 ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+# For how much time the session data will be cached.
 ssl_session_timeout  10m;
+# What type of cache should be used to cache the session data.
 ssl_session_cache shared:SSL:10m;
+# Reduce the amount of session data that needds to be stored on the server.
 ssl_session_tickets off;
+# Provide prove for SSL/TLS certificate validaty
 ssl_stapling on;
+# Enable verification of SSL/TLS stapling, which helps ensure the validity of the certificate.
 ssl_stapling_verify on;
+# The resolver that will be used for certificate verification.
 resolver 8.8.8.8 8.8.4.4 valid=300s;
+# Setting the time for the DNS resolver queries.
 resolver_timeout 5s;
-# Disable strict transport security for now. You can uncomment the following
-# line if you understand the implications.
-#add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+# Disable strict transport security for now. You can uncomment the following.
 add_header X-Frame-Options DENY;
+# Prevent browser from interpreting files as diffrent MIME type than what is declared.
 add_header X-Content-Type-Options nosniff;
 add_header X-XSS-Protection "1; mode=block";
